--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,9 @@
 {
     "/js/index.js": "/js/index.js",
+    "/css/index.css": "/css/index.css",
     "/css/app.css": "/css/app.css",
     "/js/index.js.map": "/js/index.js.map",
+    "/css/index.css.map": "/css/index.css.map",
     "/css/app.css.map": "/css/app.css.map",
     "/js/manifest.js": "/js/manifest.js",
     "/js/manifest.js.map": "/js/manifest.js.map",
