--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,12 @@
 {
-    "/js/index.js": "/js/index.js",
-    "/css/index.css": "/css/index.css",
-    "/js/index.js.map": "/js/index.js.map",
-    "/css/index.css.map": "/css/index.css.map",
+    "/js/login_index.js": "/js/login_index.js",
+    "/js/login_index.js.map": "/js/login_index.js.map",
     "/js/manifest.js": "/js/manifest.js",
     "/js/manifest.js.map": "/js/manifest.js.map",
+    "/js/muter_index.js": "/js/muter_index.js",
+    "/css/index.css": "/css/index.css",
+    "/js/muter_index.js.map": "/js/muter_index.js.map",
+    "/css/index.css.map": "/css/index.css.map",
     "/js/vendor.js": "/js/vendor.js",
     "/js/vendor.js.map": "/js/vendor.js.map"
 }
