--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,9 +4,11 @@
     "/js/manifest.js": "/js/manifest.js",
     "/js/manifest.js.map": "/js/manifest.js.map",
     "/js/muter_index.js": "/js/muter_index.js",
-    "/css/index.css": "/css/index.css",
+    "/css/muter_index.css": "/css/muter_index.css",
+    "/css/login_index.css": "/css/login_index.css",
     "/js/muter_index.js.map": "/js/muter_index.js.map",
-    "/css/index.css.map": "/css/index.css.map",
+    "/css/muter_index.css.map": "/css/muter_index.css.map",
+    "/css/login_index.css.map": "/css/login_index.css.map",
     "/js/vendor.js": "/js/vendor.js",
     "/js/vendor.js.map": "/js/vendor.js.map"
 }
