--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
+        "@types/bootstrap": "^4.3.1",
+        "@types/jquery": "^3.3.31",
         "autoprefixer": "^9.6.1",
         "axios": "^0.18",
         "bootstrap": "^4.1.0",
@@ -28,13 +30,18 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.2",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "ts-loader": "^6.2.0",
+        "typescript": "^3.6.4"
     },
     "dependencies": {
+        "@types/react": "^16.9.9",
+        "@types/react-dom": "^16.9.2",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.1.0",
+        "react-router-dom": "^5.1.2",
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
