--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dependencies": {
         "@types/react": "^16.9.9",
         "@types/react-dom": "^16.9.2",
+        "@types/react-redux": "^7.1.5",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
