--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@types/react": "^16.9.9",
         "@types/react-dom": "^16.9.2",
         "@types/react-redux": "^7.1.5",
+        "@types/react-router-dom": "^5.1.0",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
