--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@types/react-dom": "^16.9.2",
         "@types/react-redux": "^7.1.5",
         "@types/react-router-dom": "^5.1.0",
+        "@types/styled-components": "^4.1.19",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -47,6 +48,7 @@
         "redux": "^4.0.4",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
-        "slick-carousel": "^1.8.1"
+        "slick-carousel": "^1.8.1",
+        "styled-components": "^4.4.0"
     }
 }
