Enzymeのテストを追加
- jest導入
- Enzyme導入（ただしAdapterの設定は不完全）
- 一部コンポーネントのテストを作成

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.14.3",
+        "jest-cli": "^24.9.0",
         "jquery": "^3.4.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -35,11 +36,18 @@
         "typescript": "^3.6.4"
     },
     "dependencies": {
+        "@types/enzyme": "^3.10.3",
+        "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/jest": "^24.0.23",
         "@types/react": "^16.9.9",
         "@types/react-dom": "^16.9.2",
         "@types/react-redux": "^7.1.5",
         "@types/react-router-dom": "^5.1.0",
+        "@types/slick-carousel": "^1.6.33",
         "@types/styled-components": "^4.1.19",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.15.1",
+        "jest-enzyme": "^7.1.2",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -49,6 +57,7 @@
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
         "slick-carousel": "^1.8.1",
-        "styled-components": "^4.4.0"
+        "styled-components": "^4.4.0",
+        "ts-jest": "^24.2.0"
     }
 }
