--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,26 @@
       "strict": true,
       "noImplicitReturns": true,
       "noImplicitAny": true,
-      "module": "es2015",
+      "module": "esnext",
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
       "moduleResolution": "node",
       "target": "es6",
       "lib": [
-        "es2016",
+        "esnext",
         "dom"
       ],
+      // "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
       "jsx": "react"
     },
     "exclude": [
         "node_modules",
         "vendor"
-    ]
+    ],
 
-    // "include": [
-    //   "resources/ts/**/*" // TypeScriptのソース配置場所
-    // ]
+    "include": [
+      "resources/js/**/*.ts", // TypeScriptのソース配置場所
+      "resources/js/**/*.tsx" // TypeScriptのソース配置場所
+    ]
 }
