--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
 
     "include": [
       "resources/js/**/*.ts", // TypeScriptのソース配置場所
-      "resources/js/**/*.tsx" // TypeScriptのソース配置場所
+      "resources/js/**/*.tsx", // TypeScriptのソース配置場所
+      "tests/Puppeteer/**/*.ts",
     ]
 }
