ひと段落したのでコミット
- styled-componentsのbabelプラグインを導入したがうまく動かない
- 一部ファイルのディレクトリ構成をフォルダ型に変更

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     "include": [
       "resources/js/**/*.ts", // TypeScriptのソース配置場所
       "resources/js/**/*.tsx", // TypeScriptのソース配置場所
-      "tests/Puppeteer/**/*.ts",
+      "tests/Puppeteer/**/*.ts", "resources/js/LoginPage/modules/setSlickCarousel.js",
     ]
 }
