--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/puppeteer": "^2.0.0",
         "autoprefixer": "^9.6.1",
         "axios": "^0.18",
+        "babel-plugin-styled-components": "^1.10.6",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "eslint": "^6.1.0",
