ExpressのAPIエンドポイントなどを.envから読むように変更
- webpack-dotenvを導入

--- a/fe/package.json
+++ b/fe/package.json
@@ -4,6 +4,7 @@
         "dev:next": "next",
         "build:next": "next build",
         "start:fe": "NODE_ENV=production node bff/index.js",
+        "start:dev:fe": "NODE_ENV=development node bff/index.js",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --optimize-minimize --devtool source-map",
         "watch": "npm run development -- --watch",
@@ -58,6 +59,7 @@
         "@types/slick-carousel": "^1.6.33",
         "@types/styled-components": "^4.1.19",
         "@zeit/next-sass": "^1.0.1",
+        "dotenv-webpack": "^1.7.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
         "express": "^4.17.1",
