--- a/fe/package.json
+++ b/fe/package.json
@@ -21,50 +21,54 @@
         "@babel/preset-react": "^7.0.0",
         "@types/bootstrap": "^4.3.1",
         "@types/jquery": "^3.3.31",
+        "@types/power-assert": "^1.5.2",
         "@types/puppeteer": "^2.0.0",
         "@zeit/next-typescript": "^1.1.1",
-        "autoprefixer": "^9.6.1",
-        "axios": "^0.18",
+        "autoprefixer": "^9.7.3",
+        "axios": "^0.19.0",
         "babel-plugin-styled-components": "^1.10.6",
-        "bootstrap": "^4.1.0",
-        "cross-env": "^5.1",
-        "eslint": "^6.1.0",
-        "eslint-config-airbnb": "^17.1.1",
-        "eslint-plugin-import": "^2.18.2",
+        "babel-plugin-transform-export-extensions": "^6.22.0",
+        "bootstrap": "^4.4.1",
+        "cross-env": "^6.0.3",
+        "eslint": "^6.7.2",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-plugin-import": "^2.19.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-react": "^7.14.3",
+        "eslint-plugin-react": "^7.17.0",
         "file-loader": "^5.0.2",
+        "jest": "^24.9.0",
         "jest-cli": "^24.9.0",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "^5.0.0",
         "lodash": "^4.17.5",
         "next-images": "^1.2.0",
         "popper.js": "^1.12",
+        "power-assert": "^1.6.1",
         "puppeteer": "^2.0.0",
-        "resolve-url-loader": "^2.3.2",
+        "resolve-url-loader": "^3.1.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^8.0.0",
         "ts-loader": "^6.2.0",
-        "ts-node": "^8.5.2",
-        "typescript": "^3.6.4",
+        "ts-node": "^8.5.4",
+        "typescript": "^3.7.3",
         "url-loader": "^3.0.0"
     },
     "dependencies": {
-        "@types/enzyme": "^3.10.3",
+        "@types/enzyme": "^3.10.4",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/jest": "^24.0.23",
-        "@types/react": "^16.9.9",
+        "@types/react": "^16.9.16",
         "@types/react-dom": "^16.9.2",
         "@types/react-redux": "^7.1.5",
         "@types/react-router-dom": "^5.1.0",
         "@types/slick-carousel": "^1.6.33",
-        "@types/styled-components": "^4.1.19",
+        "@types/styled-components": "^4.4.1",
         "@zeit/next-sass": "^1.0.1",
         "dotenv-webpack": "^1.7.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
         "express": "^4.17.1",
         "jest-enzyme": "^7.1.2",
-        "next": "^9.1.4",
+        "next": "^9.1.5",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
