--- a/fe/tsconfig.json
+++ b/fe/tsconfig.json
@@ -15,7 +15,7 @@
       "dom"
     ],
     "allowSyntheticDefaultImports": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
