--- a/fe/package.json
+++ b/fe/package.json
@@ -67,8 +67,11 @@
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "jest-enzyme": "^7.1.2",
         "next": "^9.1.5",
+        "passport": "^0.4.1",
+        "passport-twitter": "^1.0.4",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
