--- a/fe/package.json
+++ b/fe/package.json
@@ -4,7 +4,7 @@
         "dev:next": "next",
         "build:next": "next build",
         "start:fe": "NODE_ENV=production node bff/index.js",
-        "start:dev:fe": "NODE_ENV=development node bff/index.js",
+        "start:dev:fe": "NODE_PATH=./bff NODE_ENV=development ./node_modules/.bin/ts-node --project tsconfig.bff.json bff/index.ts",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --optimize-minimize --devtool source-map",
         "watch": "npm run development -- --watch",
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "@types/bootstrap": "^4.3.1",
+        "@types/express": "^4.17.2",
         "@types/jquery": "^3.3.31",
         "@types/power-assert": "^1.5.2",
         "@types/puppeteer": "^2.0.0",
@@ -55,7 +56,9 @@
     "dependencies": {
         "@types/enzyme": "^3.10.4",
         "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/express-session": "^1.15.16",
         "@types/jest": "^24.0.23",
+        "@types/node": "^12.12.21",
         "@types/react": "^16.9.16",
         "@types/react-dom": "^16.9.2",
         "@types/react-redux": "^7.1.5",
