--- a/fe/package.json
+++ b/fe/package.json
@@ -72,6 +72,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.0",
         "jest-enzyme": "^7.1.2",
+        "jsonwebtoken": "^8.5.1",
         "next": "^9.1.5",
         "passport": "^0.4.1",
         "passport-twitter": "^1.0.4",
