--- a/fe/package.json
+++ b/fe/package.json
@@ -5,6 +5,7 @@
         "build:next": "next build",
         "start:fe": "NODE_ENV=production node bff/index.js",
         "start:dev:fe": "NODE_PATH=./bff NODE_ENV=development ./node_modules/.bin/ts-node --project tsconfig.bff.json bff/index.ts",
+        "start:nodemon": "nodemon",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --optimize-minimize --devtool source-map",
         "watch": "npm run development -- --watch",
@@ -42,6 +43,7 @@
         "laravel-mix": "^5.0.0",
         "lodash": "^4.17.5",
         "next-images": "^1.2.0",
+        "nodemon": "^2.0.2",
         "popper.js": "^1.12",
         "power-assert": "^1.6.1",
         "puppeteer": "^2.0.0",
@@ -66,6 +68,7 @@
         "@types/slick-carousel": "^1.6.33",
         "@types/styled-components": "^4.4.1",
         "@zeit/next-sass": "^1.0.1",
+        "cookie-parser": "^1.4.4",
         "dotenv-webpack": "^1.7.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.15.1",
