--- a/fe/.babelrc
+++ b/fe/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets": ["next/babel", "@zeit/next-typescript/babel"],
-  "plugins": ["babel-plugin-styled-components"]
+  "plugins": ["babel-plugin-styled-components"],
+  "env": {
+    "test": {
+      "plugins": ["require-context-hook", "macros"]
+    }
+  }
 }
 
