--- a/fe/package.json
+++ b/fe/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-info": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
     "@storybook/addon-links": "^5.2.8",
+    "@storybook/addon-storyshots": "^5.2.8",
     "@storybook/addon-viewport": "^5.2.8",
     "@storybook/addons": "^5.2.8",
     "@storybook/preset-typescript": "^1.2.0",
@@ -42,6 +43,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-preset-react-app": "^9.1.0",
@@ -64,6 +66,8 @@
     "power-assert": "^1.6.1",
     "puppeteer": "^2.0.0",
     "react-docgen-typescript-loader": "^3.6.0",
+    "react-test-renderer": "^16.12.0",
+    "require-context.macro": "^1.2.2",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.15.2",
     "sass-loader": "^8.0.0",
@@ -83,6 +87,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/slick-carousel": "^1.6.33",
+    "@types/storybook__addon-storyshots": "^5.1.2",
     "@types/styled-components": "^4.4.1",
     "@zeit/next-sass": "^1.0.1",
     "cookie-parser": "^1.4.4",
