--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,9 +19,20 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install, build, and test
       run: |
+        BOT_MESSAGE = ""
+        STATUS = 1
+
         cd fe
-        npm install
+        #npm install
         npx jest
-        curl -X POST --data-urlencode "payload={\"channel\": \"#development\", \"text\": \"GitHubでのジョブが終了したようです。\"}" https://hooks.slack.com/services/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
+        if [ $? = 0 ]; then
+          BOT_MESSAGE="@here\nGitHubのジョブは無事に成功したようです。\nお疲れ様でした。"
+          STATUS=0
+        else
+          BOT_MESSAGE="@here\nGitHubのジョブが失敗したようです。お手隙の際に確認してくださいね。\nhttps://github.com/Kanta0111/MuteRemider/actions"
+        fi
+
+        curl -X POST --data-urlencode "payload={\"channel\": \"#development\", \"text\": \"${BOT_MESSAGE}\"}" https://hooks.slack.com/services/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
+        exit $STATUS
       env:
         CI: true
