--- a/fe/package.json
+++ b/fe/package.json
@@ -97,6 +97,7 @@
     "@types/styled-components": "^4.4.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.0",
+    "connect-session-firebase": "^5.13.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
